--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,8 @@ yarn-error.log*
 # Docker
 ############################
 *.pid
+
+############################
+# AI
+############################
+.claude
